# privateGPT

./: .devcontainer.json  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  streamlit_app.py
src/: app.py  constants.py  ingest.py  privateGPT.py  streamlit_app.py
